# EmbeddedSystems_OpenCV

./: README.md
CascadeClassifier/: CMakeLists.txt  mail.cpp  mail.py  mail.sh  outputVideo.avi  txtLogFileWrite.txt
CascadeClassifier/Debug/: CascadeClassifier  makefile  objects.mk
CascadeClassifier/Debug/src/: main.d  personObj.d  subdir.mk
CascadeClassifier/Release/: makefile
CascadeClassifier/Release/src/: subdir.mk
CascadeClassifier/outputVideo/: VideoCam T12018:04:24 - 07:07:33.avi
CascadeClassifier/src/: main.cpp  personObj.cpp  personObj.h
PeopleTracking/: CMakeCache.txt  CMakeLists.txt  CMakeLists_ROOBockey.txt  Makefile  README.txt  main.cpp  main.h  myopencvthing  peopledetect.cpp  personObj.cpp
PeopleTracking/PeopleTracking/: Makefile  cmake_install.cmake  myopencvthing  peopledetect.cpp
cascadeClassifier/: CMakeCache.txt  CodeReferences.txt  Makefile  main.cpp  myopencvthing  personObj.cpp  personObj.h
cascadeClassifier/cascadeClassifier/: CMakeLists.txt  cmake_install.cmake  main.cpp  myopencvthing  personObj.cpp  personObj.h
